# binary-instances

./: README.rst  TestSuite.hs  binary-instances.cabal
Data/Binary/: Generic.hs  Vector.hs
Data/Binary/Array/: Repa.hs
Data/Binary/Tests/: Repa.hs  Vector.hs
